--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	
-<section class="box"> 
+<div class="box"> 
 	<img class="foto" src="images/foto.jpg" alt="Eliška Veselá">
 
 	<h1>Eliška Veselá</h1>
@@ -24,6 +24,6 @@
 
 	<a class="twitter" href="https://twitter.com/">Twitter</a>
 	<a class="facebook" href="https://www.facebook.com/">Facebook</a>
-</section>
+</div>
 </body>
 </html>
